Correctly align the version drop-down menu in Safari (see #5854)

--- a/system/themes/default/src/main.css
+++ b/system/themes/default/src/main.css
@@ -252,8 +252,14 @@ h2.sub_headline_index {
 .mac .tl_version_panel .tl_select,.mac .tl_panel_bottom .tl_select {
 	font-size:11px;
 }
+.safari .tl_version_panel {
+	overflow:hidden; /* see #5854 */
+}
 .tl_version_panel .tl_formbody {
 	position:relative;
+}
+.safari .tl_version_panel .tl_formbody {
+	float:right; /* see #5854 */
 }
 .tl_version_panel .tl_submit {
 	margin-top:1px;
